@@ -1,5 +1,12 @@
 2005-01-31  Sam Steingold  <sds@gnu.org>
 
+	fixed TRUENAME on WIN32: it used to lose :VERSION :NEWEST
+	* pathname.d (substitute_resolved_path): new function, extracted
+	from assure_dir_exists/unix
+	(assure_dir_exists): use it on both UNIX and WIN32
+
+2005-01-31  Sam Steingold  <sds@gnu.org>
+
 	* stream.d (get_standard_output_file_stream): reuse
 	terminal_stream only if it is still open
 
